tryig to fix stupid bar thing on ios

--- a/style.css
+++ b/style.css
@@ -54,8 +54,8 @@ p{
 .welcome{
     background-color: var(--lightLight-color);
     z-index: 1;
-    width: 100vw;
-    height: 100vh;
+    width: 100dvw;
+    height: 100dvh;
     position: absolute;
     left: 0px;
     top: 0px;
@@ -236,8 +236,9 @@ p{
     position: absolute;
     left: 0px;
     top: 0px;
-    width: 100vw;
-    height: 100vh;
+    width: 100dvw;
+    height: 100dvh;
+    height: 1px;
     overflow: hidden;
 }
 
@@ -248,8 +249,8 @@ p{
     align-items: center;
     text-align: center;
     position: absolute;
-    width: 100vw;
-    height: 100vh;
+    width: 100dvw;
+    height: 100dvh;
     left: 0px;
     top: 0px;
     overflow: hidden;
@@ -800,8 +801,8 @@ p{
 
 .settings{
     display: flex;
-    height: 100vh;
-    width: 100vw;
+    height: 100dvh;
+    width: 100dvw;
     background-color: white;
     margin: 0px;
     position: absolute;
@@ -1067,6 +1068,26 @@ p{
 }
 
 @media screen and ((max-width: 550px) and (max-height: 667px)), ((max-width: 667px) and (max-height: 550px)){
+    .welcome{
+        
+    }
+
+    #login{
+
+    }
+
+    #createAccount{
+
+    }
+
+    .main{
+
+    }
+
+    .settings{
+
+    }
+
     .welcomeBox{
         width: 100%;
         height: 100%;
